[project]
name = "sonic-topography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pymusiclibrary>=0.0.4",
    "qrcode[pil]>=8.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
